	Better identified messages from traydvm, when the debug option is
	used: they are prefixed with '-----traydvm----->'
	Simplification of the 'setup_sensitive' function to only look for a
	change in mountpoints
	The traydvm script ignores all changes made to partitions or file
	system types or label, while it is running; if such changes are made
	on a device, while traydvm is running on it, the device has first to be
	plugged out/in to re-launch traydvm on it
2012-08-02
        * 2.1.1-1 :
	Bug fix when there is no CD/DVD drive at /dev/sr0
2012-10-14
        * 2.2-1 :
	Added connection to 'interface-added' signal, to act on Filesystem
	interface addition to an already present object
	Added default values to 'iscontainer' and 'iscontained' variables
	when there is no Partition interface
	In traydvm, change in the detection of optical disk, using the Drive
	interface 'Optical' property
2012-10-18
        * 2.2.1-1 :
	Using python2 because the gobject introspection scheme is broken with
	new python 3.3.0 release
2013-01-12
        * 2.2.2-1 :
	Using python3 again
	Changed the call_sync method with call_mount_sync, call_unmount_sync
	and call_eject_sync of the udisks2 filesystem interface; they are
	easier and lighter to use
2013-04-22
        * 2.2.3-1 :
	Don't use signal handler anymore to end processes
	But use the KeyboardInterrupt exception
	So <Ctrl-C> or SIGINT ends 'udisksvm' and 'traydvm'
2013-07-12
        * 2.2.4-1 :
	Replace the 'gi._glib.GError' exception with 'GLib.GError'
	Remove the 'ntfs-3g' file system type which is rejected by UDisks2
2013-08-06
        * 2.3.0-1 :
	New feature: notifications of 'Mount' and 'UnMount' actions
	or of errors when executing actions
	this can be disabled by the '-s', '--silent' command line option
	Important change: automounting is disabled by default
	and enabled by the '-a', '--auto' command line option
	added the 'sync' mount option for 'ext2' file system
	better management of added objects
	small improvements of code
