@@ -5,7 +5,7 @@
 
 pkgname=einstein
 pkgver=2.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Remake of old DOS game Sherlock which was inspired by Albert Einstein's puzzle"
 url="http://web.archive.org/web/20120521062745/http://games.flowix.com/en/index.html"
 #source=("http://games.flowix.com/files/$pkgname/$pkgname-$pkgver-src.tar.gz" "${pkgname}.desktop" "${pkgname}.png" arch.patch)
@@ -14,7 +14,7 @@ source=("ftp://ftp.cstone.net/debian/pool/main/e/$pkgname/${pkgname}_${pkgver}.d
 "${pkgname}.png"
 "arch.patch"
 )
-depends=('sdl_ttf' 'sdl_mixer' 'x-server')
+depends=('sdl_ttf' 'sdl_mixer' 'x-server'  'ttf-dejavu')
 makedepends=('sharutils')
 license=('GPL')
 arch=('i686' 'x86_64')
@@ -27,6 +27,7 @@ md5sums=('d47d4ae80478d4d8d5796e65d134124f'
 
 build() {
   patch -p0 < arch.patch
+
   cd $startdir/src/$pkgname-$pkgver
   patch -p1 <  ../einstein_2.0.dfsg.2-5.diff
   patch -p0 <  debian/patches/01_sdl.diff
@@ -39,18 +40,21 @@ build() {
   patch -p0 <  debian/patches/08_gcc43.diff
   patch -p0 <  debian/patches/09_colors.diff
   patch -p0 <  debian/patches/10_gcc43.diff
- 
-  
+
   uudecode debian/einstein.png.uue
   uudecode debian/icon.bmp.uue
   [ -f res/DejaVuSans.ttf ] || cp -p /usr/share/fonts/TTF/DejaVuSans.ttf res/
-
   make PREFIX=/usr || return 1
-  make PREFIX=$startdir/pkg/usr install || return 1
+}
+package()
+{
+  cd $startdir/src/$pkgname-$pkgver
 
-  mkdir -p ${startdir}/pkg/usr/share/applications
-  install -m644 debian/${pkgname}.desktop ${startdir}/pkg/usr/share/applications/
-  mkdir -p ${startdir}/pkg/usr/share/pixmaps
-  install -m644 $startdir/${pkgname}.png ${startdir}/pkg/usr/share/pixmaps/
+  make PREFIX=$startdir/pkg/$pkgname/usr install || return 1
+
+  mkdir -p ${startdir}/pkg/$pkgname/usr/share/applications
+  install -m644 debian/${pkgname}.desktop ${startdir}/pkg/$pkgname/usr/share/applications/
+  mkdir -p ${startdir}/pkg/$pkgname/usr/share/pixmaps
+  install -m644 $startdir/${pkgname}.png ${startdir}/pkg/$pkgname/usr/share/pixmaps/
 
 }
