@@ -4,7 +4,7 @@
 pkgname=fusioninventory-agent
 _pkgname="FusionInventory-Agent"
 pkgver=2.3.0
-pkgrel=1
+pkgrel=2
 pkgdesc="FusionInventory Agent is an application for keeping track of the hardware and software"
 arch=('i686' 'x86_64')
 url="http://fusioninventory.org"
@@ -18,7 +18,7 @@ depends=('perl' 'dmidecode'
          'perl-proc-daemon' 'perl-json' 'perl-io-compress'
          'perl-net-ip' 'perl-http-proxy' 'perl-http-server-simple'
          'perl-io-capture' 'perl-io-socket' 'perl-io-socket-ssl'
-         'perl-lwp-protocol-https' 'perl-parse-edid')
+         'perl-lwp-protocol-https' 'perl-parse-edid' 'perl-socket-getaddrinfo')
 makedepends=('perl-extutils-makemaker')
 optdepends=('hdparm' 'pciutils' 'perl-net-cups')
 source=("http://forge.fusioninventory.org/attachments/download/1016/$_pkgname-$pkgver.tar.gz"
@@ -26,7 +26,7 @@ source=("http://forge.fusioninventory.org/attachments/download/1016/$_pkgname-$p
         'fusioninventory-agent.config')
 md5sums=('a4b17fe8d9cc7ceae673d81ea2917dc3'
          'cd0d59b266a41977f51d9e99ecca8cd5'
-         '48d1b22c1bb2fcdf8a2cd9aa9846bdee')
+         '7932a4a5dc2f1a97d1fa6f9f68765591')
 
 build() {
   cd "$srcdir/$_pkgname-$pkgver"
