@@ -1,2 +1,2 @@
 PATH=/sbin:/bin:/usr/sbin:/usr/bin
-FUSINVOPT="--daemon-no-fork"
+FUSINVOPT="--daemon --no-fork"
