@@ -1,29 +1,33 @@
+# CPAN Name  : Email::Folder
 # Contributor: Anton Leontiev <bunder /at/ t-25.ru>
+# Generator  : CPANPLUS::Dist::Arch 1.25
+
 pkgname=perl-email-folder
-pkgver=0.855
+pkgver=0.857
 pkgrel=1
-pkgdesc="Perl module to read all messages from a folder as Email::Simple objects"
-arch=("any")
-url="http://search.cpan.org/dist/Email-Folder/"
-license=("GPL" "PerlArtistic")
-depends=("perl" "perl-email-foldertype>=0.6" "perl-email-simple")
+pkgdesc='Perl module to read all messages from a folder as Email::Simple objects'
+arch=('any')
+url='http://search.cpan.org/dist/Email-Folder'
+license=('PerlArtistic' 'GPL')
+depends=('perl>=5.13.4' 'perl-email-foldertype>=0.6' 'perl-email-simple')
+checkdepends=('perl-capture-tiny')
+source=(http://search.cpan.org/CPAN/authors/id/R/RJ/RJBS/Email-Folder-0.857.tar.gz)
 options=(!emptydirs)
-source=(http://search.cpan.org/CPAN/authors/id/R/RJ/RJBS/Email-Folder-$pkgver.tar.gz)
-md5sums=("0058c0c066bb383103976f659fa8b301")
+md5sums=('a7be2a3cb9353a1c9f7c5f83405f07d8')
 
 build() {
-  cd "$srcdir/Email-Folder-$pkgver"
+  cd Email-Folder-0.857
   PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
   make
 }
 
 check() {
-  cd "$srcdir/Email-Folder-$pkgver"
+  cd Email-Folder-0.857
   make test
 }
 
 package() {
-  cd "$srcdir/Email-Folder-$pkgver"
+  cd Email-Folder-0.857
   make install DESTDIR="$pkgdir"
   find "$pkgdir" -name .packlist -o -name perllocal.pod -delete
 }
