@@ -1,31 +1,33 @@
+# CPAN Name  : Email::FolderType
 # Contributor: Anton Leontiev <bunder /at/ t-25.ru>
+# Generator  : CPANPLUS::Dist::Arch 1.25
+
 pkgname=perl-email-foldertype
-pkgver=0.813
+pkgver=0.814
 pkgrel=1
-pkgdesc="Perl module to determine the type of a mail folder"
-arch=("any")
-url="http://search.cpan.org/dist/Email-FolderType/"
-license=("GPL" "PerlArtistic")
-depends=("perl>=5.8.9")
+pkgdesc='Perl module to determine the type of a mail folder'
+arch=('any')
+url='http://search.cpan.org/dist/Email-FolderType'
+license=('PerlArtistic' 'GPL')
+depends=('perl>=5.8.9' 'perl-email-simple')
+checkdepends=('perl>=5.13.4' 'perl-capture-tiny')
+source=(http://search.cpan.org/CPAN/authors/id/R/RJ/RJBS/Email-FolderType-0.814.tar.gz)
 options=(!emptydirs)
-source=(http://search.cpan.org/CPAN/authors/id/R/RJ/RJBS/Email-FolderType-$pkgver.tar.gz)
-md5sums=("4d33367e38ec1548737c15ccd200f18c")
+md5sums=('952aad6ab391737932dc32c6e5c17d26')
 
 build() {
-  cd "$srcdir/Email-FolderType-$pkgver"
+  cd Email-FolderType-0.814
   PERL_MM_USE_DEFAULT=1 perl Makefile.PL INSTALLDIRS=vendor
   make
 }
 
-check() {  
-  cd "$srcdir/Email-FolderType-$pkgver"
+check() {
+  cd Email-FolderType-0.814
   make test
 }
 
 package() {
-  cd "$srcdir/Email-FolderType-$pkgver"
+  cd Email-FolderType-0.814
   make install DESTDIR="$pkgdir"
   find "$pkgdir" -name .packlist -o -name perllocal.pod -delete
 }
-
-# vim:set ts=2 sw=2 et:
