@@ -1,0 +1,11 @@
+
+[Desktop Entry]
+Encoding=UTF-8
+Terminal=false
+Type=Application
+StartupNotify=true
+Name=Qrc
+GenericName=QR-Code Generator/Reader
+Exec=qrc
+Icon=/usr/share/pixmaps/qrc.png
+Categories=System
