@@ -3,7 +3,7 @@
 pkgname=tryton
 pkgver=2.8.2
 _pkgdir=2.8
-pkgrel=1
+pkgrel=2
 pkgdesc="A three-tiers high-level general purpose application platform (client application)"
 arch=('any')
 url="http://www.tryton.org/"
@@ -14,7 +14,7 @@ makedepends=('python2-distribute')
 source=("http://downloads.tryton.org/$_pkgdir/$pkgname-$pkgver.tar.gz"
         'tryton.desktop')
 md5sums=('44133fae1c3fdedc200ac6b1a89d0e40'
-         '249788f939a9a8b598e4cbe3d94bd188')
+         '7ca15ad6c790c78817fe1a1b6a2c3fcf')
 
 build() {
   cd $srcdir/$pkgname-$pkgver
