@@ -16,7 +16,7 @@
 # 
 # Maintainer: Bernard Baeyens (berbae)  <berbae52 at sfr dot fr>
 pkgname=udisksvm
-pkgver=2.3.0
+pkgver=2.3.1
 pkgrel=1
 pkgdesc="GUI UDisks wrapper for removable media"
 arch=('any')
@@ -28,7 +28,7 @@ install=udisksvm.install
 changelog=ChangeLog
 source=("https://github.com/berbae/udisksvm/raw/master/$pkgname-$pkgver.tar.gz")
 
-sha1sums=('055ae80597d5fd6f2f38f562cd0ba168c6907018')
+sha1sums=('345ac48a837b73c65e4606f5d3b92c5e1cd13dea')
 
 package() {
   cd $srcdir
