@@ -135,4 +135,15 @@
 	added the 'sync' mount option for 'ext2' file system
 	better management of added objects
 	small improvements of code
-
+2013-08-30
+        * 2.3.1-1 :
+	Code modified to pass a PEP8 Python style guide compliance test
+	Don't show jobs objects added and removed
+	Use only string methods
+	Use get_block(), get_filesystem(), get_partition(), get_drive()
+	instead of the get_interface('...') method
+	Use 'is not None' in tests
+	Change 'audiotracks' with 'numaudio' names
+	Use all uppercase constant names
+	Use 'except Exception:' in traydvm script
+	Change name of popup menu name from 'udisksvm' to 'traydvm'
